WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24513
REGRESSION: Cursor movement doesn't work on Tiger (ICU 3.2)
https://bugs.webkit.org/show_bug.cgi?id=24513
Summary
REGRESSION: Cursor movement doesn't work on Tiger (ICU 3.2)
George Staikos
Reported
2009-03-11 05:09:16 PDT
ASSERTION FAILED: ICU could not open a break iterator: U_ILLEGAL_ARGUMENT_ERROR (1) U_SUCCESS(openStatus) (/Users/staikos/code/WebKit/WebCore/platform/text/TextBreakIteratorICU.cpp:130 WebCore::TextBreakIterator* WebCore::setUpIteratorWithRules(bool&, WebCore::TextBreakIterator*&, const char*, const UChar*, int)) Apparently the rule is considered invalid. Was reproduced by running acid3 twice and clicking on the A, but other ways to reproduce it exist also.
Attachments
Disable the new iterator on Tiger
(2.02 KB, patch)
2009-03-11 08:33 PDT
,
Alexey Proskuryakov
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-03-11 05:13:13 PDT
This causes a lot of failures on build.webkit.org.
Alexey Proskuryakov
Comment 2
2009-03-11 08:33:09 PDT
Created
attachment 28481
[details]
Disable the new iterator on Tiger
Alexey Proskuryakov
Comment 3
2009-03-11 08:47:32 PDT
Committed revision 41587.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug