        Reviewed by George Staikos.

https://bugs.webkit.org/show_bug.cgi?id=24513
        REGRESSION: Cursor movement doesn't work on Tiger (ICU 3.2)

        Fixes existing tests on Tiger.

        * platform/text/TextBreakIteratorICU.cpp: (WebCore::cursorMovementIterator):
        Use characterBreakIterator on Tiger (like we used to do).



Canonical link: https://commits.webkit.org/33649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41587 268f45cc-cd09-0410-ab3c-d52691b4dbfc