WebCore/platform/text/TextBreakIteratorICU.cpp
@@ -115,6 +115,7 @@ bool isTextBreak(TextBreakIterator* bi, int pos)
     return ubrk_isBoundary(bi, pos);
 }
 
+#ifndef BUILDING_ON_TIGER
 static TextBreakIterator* setUpIteratorWithRules(bool& createdIterator, TextBreakIterator*& iterator,
     const char* breakRules, const UChar* string, int length)
 {
@@ -139,9 +140,14 @@ static TextBreakIterator* setUpIteratorWithRules(bool& createdIterator, TextBrea
 
     return iterator;
 }
+#endif // BUILDING_ON_TIGER
 
 TextBreakIterator* cursorMovementIterator(const UChar* string, int length)
 {
+#ifdef BUILDING_ON_TIGER
+    // ICU 3.2 cannot compile the below rules.
+    return characterBreakIterator(string, length);
+#else
     // This rule set is based on character-break iterator rules of ICU 3.8
     // <http://source.icu-project.org/repos/icu/icu/tags/release-3-8/source/data/brkitr/char.txt>.
     static const char* kRules =
@@ -170,6 +176,7 @@ TextBreakIterator* cursorMovementIterator(const UChar* string, int length)
     static bool createdInputCursorIterator = false;
     static TextBreakIterator* staticInputCursorIterator;
     return setUpIteratorWithRules(createdInputCursorIterator, staticInputCursorIterator, kRules, string, length);
+#endif // BUILDING_ON_TIGER
 }
 
 }
